--- a/index.html
+++ b/index.html
@@ -6,34 +6,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Open+Sans:wght@400;700&display=swap"
-    rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@500;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Próximo Destino</title>
+    <link rel="icon" type="image/x-icon" href="/images/Favicon.svg">
+    <title>Flutuar.com</title>
 </head>
 
 <body>
 
 
     <div id="hero">
-        <img src="images/image 1.jpg" alt="Desenho de uma pessoa vestindo uma camisa amarela em uma sala com móveis">
-        <h1>Ambientes <span>únicos</span> para você!</h1>
+        <img src="images/img1.png" alt="Desenho de uma pessoa vestindo uma camisa branca colocando pins rosas em um globo">
+        <h1>O seu próximo <span>destino</span> pode estar aqui!</h1>
         <p>
-            Nós criamos ambientes <strong>exclusívos</strong> e <strong>únicos</strong>, com muito bom gosto e profissionalismo, investimos tempo e <span>dedicação</span> no seu projeto.
+            Aqui você encontra uma seleção de <strong>pacotes completos</strong> para as suas férias!
             <br>
             <br>
-            Tenha <span>ambientes limpos</span> e bem decorados, transmitindo <span>elegância e finesse</span> para todo aquele que estiver ali.
+            Na <span>Flutuar</span> você encontra pacotes de viagens nacionais e internacionais que incluem: passagens aéreas, hotéis, café da manhã, e até seguro viagem com <strong>preços arrasadores</strong>!
+            <br>
+            <br>
+            <br>
+            Se você ainda não tem um destino definido, confira nossa seção de ofertas.
         </p>
     </div>
 
     <div id="footer">
         <div class="line"></div>
-        <a href="https://instagram.com/moveis" target="_blank">Instagram</a>
-        <a href="mailto:contato@moveisparavoce.com">Fale conosco</a>
+        <a href="#">Destinos</a>
+        <a href="#">Ofertas</a>
+        <a href="mailto:contato@flutuar.com">Contato</a>
     </div>
 
-    <img id="balls-decoration" src="images/balls-decoration.svg"
-        alt="Bolinhas alaranjadas no canto direito inferior da tela">
+    <img id="wave-decoration" src="images/Wave.png"
+        alt="Ilustração com formato de ondas com cor azul no rodapé do site">
 </body>
 
 </html>
